style: :lipstick: collection mobile styling fix

--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -22,4 +22,8 @@
   left: 50%;
   position: absolute;
   transform: translateX(-50%);
+
+  @include media('<phone') {
+    font-size: 2rem;
+  }
 }
