--- a/styles/pages/collections/collections.scss
+++ b/styles/pages/collections/collections.scss
@@ -13,6 +13,10 @@
 
 .collections__titles {
   @extend %vertical-titles;
+
+  @include media("<=phone") {
+    display: none;
+  }
 }
 
 .collections__titles__label {
@@ -48,6 +52,10 @@
 
 .collections__content {
   @extend %cover;
+
+  @include media("<=phone") {
+    display: none;
+  }
 }
 .collections__article {
   bottom: 8rem;
@@ -66,4 +74,26 @@
   @extend %description-16;
 
   max-width: 44rem;
+}
+
+.collections__mobile {
+  bottom: 5rem;
+  display: flex;
+  position: absolute;
+}
+
+.collections__mobile__item {
+  padding-left: 5rem;
+  width: 100vw;
+}
+
+.collections__mobile__item__label {
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+.collections__mobile__item__title {
+  font-family: $font-george-x;
+  font-size: 12rem;
 }
